# soybean-leaf-pest-damage

./: .gitignore  README.md  app.py  main.py  model_params.yaml  pyproject.toml  test_cutmix.py  test_stderr_suppression.py  test_tf_logs.py
scripts/: README.md  gradcam_analysis.py  main.py  main_tuning.py  prepare_dataset_pests.py  prepare_insect12c.py
scripts/analysis/: gradcam_analysis.py
scripts/data_preparation/: prepare_dataset_pests.py  prepare_insect12c.py  split_dataset_by_group.py
scripts/yolo_inaturalist/: auto_crop_inaturalist.py  create_yolo_dataset.py  download_inaturalist.py  train_yolo.py
src/api/: README.md  dependencies.py  main.py  pyproject.toml
src/api/config/: prompts.py  settings.py
src/api/models/: rag.py  search.py
src/api/routers/: rag.py  search.py
src/api/services/: embeddings.py  rag.py  search.py
src/app/: endpoint.py  main.py  pyproject.toml  router.py
src/cnnClassifier/: __init__.py  pyproject.toml  utils.py
src/cnnClassifier/components/: __init__.py  augmentation_pipeline.py  data_ingestion.py  data_splitter.py  model_evaluation.py  model_training.py  prepare_model.py
src/cnnClassifier/config/: constants.py  settings.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/models/: custom_blocks.py  factory.py  mobilevit.py  mobilevit_v2.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_data_splitting.py  stage_03_prepare_model.py  stage_04_model_training.py  stage_05_model_evaluation.py
src/cnnClassifier/tuning/: keras_tuner.py  mlflow_tuning.py
src/cnnClassifier/utils/: data_utils.py  logger.py
src/rag/: README.md  pyproject.toml
src/rag/ingestion/: core.py  main.py  providers.py  test_query.py
src/rag/ingestion/extractors/: docling_extractor.py  pypdf_extractor.py
src/rag/ingestion/utils/: chunker.py
src/rag/shared/: constants.py  schemas.py
src/ui/: pyproject.toml
