[project]
name = "soybean-leaf-pest-damage"
version = "0.1.0"
description = "Soybean leaf pest damage classification using CNN"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "tensorflow[and-cuda]==2.17.1",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    
    # Web framework (for future API)
    "Flask",
    "Flask-Cors",
    
    # Utility libraries
    "tqdm",
    "ensure==1.0.2",
    "joblib",
    "types-PyYAML",
    "setuptools",
    
    # Future image processing dependencies (currently unused but planned)
    # Uncomment when needed:
    # "opencv-python",      # Computer vision operations
    # "Pillow",             # Image processing
    # "albumentations",     # Image augmentation
]

[dependency-groups]
dev = [
    "dvc>=3.60.1",
    "notebook>=7.4.3",
]

# Test dependencies (uncomment when tests are added)
test = [
    # "pytest>=7.0.0",
    # "pytest-cov",
    # "pytest-mock",
]

# Optional image processing dependencies (install when needed)
image-processing = [
    "opencv-python",
    "Pillow", 
    "albumentations",
]

[tool.uv.sources]
soybean-leaf-pest-damage = { workspace = true }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"