[project]
name = "soybean-leaf-pest-damage"
version = "0.1.0"
description = "Soybean leaf pest damage detection system using deep learning and clean architecture principles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow[and-cuda]==2.17.1",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    
    # Web framework (for future API)
    "Flask",
    "Flask-Cors",
    
    # Utility libraries
    "tqdm",
    "ensure==1.0.2",
    "joblib",
    "types-PyYAML",
    "setuptools",
    
    # Future image processing dependencies (currently unused but planned)
    # Uncomment when needed:
    # "opencv-python",      # Computer vision operations
    # "Pillow",             # Image processing
    # "albumentations",     # Image augmentation
]

[project.optional-dependencies]
dev = [
    "dvc>=3.60.1",
    "notebook>=7.4.3",
]

# Test dependencies (uncomment when tests are added)
test = [
    # "pytest>=7.0.0",
    # "pytest-cov",
    # "pytest-mock",
]

# Optional image processing dependencies (install when needed)
image-processing = [
    "opencv-python",
    "Pillow", 
    "albumentations",
]

[tool.uv.sources]
soybean-leaf-pest-damage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnnClassifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
