[project]
name = "soybean-leaf-pest-damage"
version = "0.1.0"
description = "Soybean leaf pest damage detection system using deep learning and clean architecture principles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow[and-cuda]==2.17.1",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    # Web framework (for future API)
    "Flask",
    "Flask-Cors",
    # Utility libraries
    "tqdm",
    "ensure==1.0.2",
    "joblib",
    "types-PyYAML",
    "setuptools",
    "pip>=25.3",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "typer>=0.20.0",
    "keras-tuner>=1.4.8",
    "gdown>=5.2.1",
    "pyyaml>=6.0.3",
    "tensorflow-model-optimization>=0.8.0",
    "tf-keras>=2.17.0",
    "streamlit>=1.53.1",
]

[project.optional-dependencies]
dev = [
    "dvc>=3.60.1",
    "notebook>=7.4.3",
]

# Test dependencies (uncomment when tests are added)
test = [
    # "pytest>=7.0.0",
    # "pytest-cov",
    # "pytest-mock",
]

# Optional image processing dependencies (install when needed)
image-processing = [
    "opencv-python",
    "Pillow", 
    "albumentations",
]

[tool.uv.sources]
soybean-leaf-pest-damage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnnClassifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
